gccida/c0/cse_around_loop
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_around_loop/src/cse.c:7016:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = ( rtx)loop_start[1]; ; insn = ( rtx)insn[1] ) 
                   ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_around_loop/src/cse.c:7016:50: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = ( rtx)loop_start[1]; ; insn = ( rtx)insn[1] ) 
                                                 ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_around_loop/src/cse.c:7043:35: error: use of undeclared identifier 'machine_mode'
invalidate( p->exp->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)p->exp)); 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_around_loop/src/cse.c:7043:50: error: expected expression
invalidate( p->exp->fld[0].rtx, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)p->exp)); 
                                                 ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_around_loop/src/obj/cse.o] Error 1
